--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ Have fun creating your portfolio on this template!!! -->
     <meta name="keywords" content="samkanfer, Samuel, Kanfer, Data, CSS, HTML, Developer, Tableau, Python, R, Big Data, Analysis, Business Intelligence" />
 
     <!-- Improve your SEO by adding a small descrption of you -->
-    <meta name="description" content="Samuel Kanfer | Data Analyst" />
+    <meta name="description" content="Samuel Kanfer | Data Specialist" />
 
     <!-- Add a your png Logo to the assets folder and change the href attr accordingly  -->
     <link rel="icon" type="image/png" href="./assets/devfolio-logo.png" />
