--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@ Have fun creating your portfolio on this template!!! -->
     <meta name="description" content="Samuel Kanfer | Data Specialist" />
 
     <!-- Add a your png Logo to the assets folder and change the href attr accordingly  -->
-    <link rel="icon" type="image/png" href="./assets/devfolio-logo.png" />
+    <link rel="icon" type="image/png" href="" />
 
     <!-- Add your primary-theme color for the value of content -->
     <meta name="theme-color" content="#36d1dc" />
