--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
     <!-- Fill content with the URL of this portfolio you'll host -->
     <meta property="og:url" content="https://devfolio.js.org/" />
     <!-- Fill content with the title of your portfolio(Recommended to use what you put in <title> tag) -->
-    <meta property="og:title" content="[Your name here] | Developer" />
+    <meta property="og:title" content="Samuel Kanfer | Data Specialist" />
     <!-- Give a short description that'll show up when you/someone shares your portfolio on different platform -->
-    <meta property="og:description" content="Made using DevFolio Template" />
+    <meta property="og:description" content="Samuel Kanfer's Website" />
     <!-- Add a thumbnail image in assets folder and fill the content attr with URL to that thumbnail 
       so that a thumbnail image of your portfolio is shown while shared on other platform -->
     <meta
@@ -42,11 +42,11 @@
     <!-- Again fill content attr with the URL of this portfolio you'll host -->
     <meta property="twitter:url" content="https://devfolio.js.org" />
     <!-- Recommended to use the same text used within <title> element -->
-    <meta property="twitter:title" content="[Your name here] | Developer" />
+    <meta property="twitter:title" content="Samuel Kanfer | Data Specialist" />
     <!-- short description that shows up while your portfolio is shared -->
     <meta
       property="twitter:description"
-      content="Made using DevFolio Template"
+      content="Samuel Kanfer's Website"
     />
     <!-- Fill content with the URL to the thumbnail image that you'll put in the assets folder -->
     <meta
