--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
     <!-- Fill content with the URL of this portfolio you'll host -->
-    <meta property="og:url" content="https://devfolio.js.org/" />
+    <meta property="og:url" content="https://samkanfer.github.io" />
     <!-- Fill content with the title of your portfolio(Recommended to use what you put in <title> tag) -->
     <meta property="og:title" content="Samuel Kanfer | Data Specialist" />
     <!-- Give a short description that'll show up when you/someone shares your portfolio on different platform -->
@@ -40,7 +40,7 @@
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image" />
     <!-- Again fill content attr with the URL of this portfolio you'll host -->
-    <meta property="twitter:url" content="https://devfolio.js.org" />
+    <meta property="twitter:url" content="https://samkanfer.github.io" />
     <!-- Recommended to use the same text used within <title> element -->
     <meta property="twitter:title" content="Samuel Kanfer | Data Specialist" />
     <!-- short description that shows up while your portfolio is shared -->
