Updated resume link

--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
               Samuel Kanfer is a highly motivated professional with a Bachelor of Science in Management Information Systems and a minor in Business Analytics from Florida State University. With a strong educational background and a keen interest in data-driven decision-making, Samuel possesses a diverse skill set that includes proficiency in SAS Enterprise Miner, SQL, R Studio, and Tableau. His coursework in Big Data, Database Management, and Business Intelligence has equipped him with a solid foundation in understanding complex systems and analyzing data to derive meaningful insights.
             </p>
             <span class="about-wrapper__cta">
-              <a href="./assets/skresume.pdf" class="cta-btn cta-btn--resume">View Resume</a>
+              <a href="./assets/skresume.pdf" class="cta-btn cta-btn--resume" target="_blank">View Resume</a>
             </span>
           </div>
         </div>
