--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://cdnjs.cloudflare.com" />
 
     <!-- Title: add your Portfolio websites's title here -->
-    <title>Samuel | Data Analyst</title>
+    <title>Samuel | Data Specialist</title>
 
     <!-- Add some coding keywords below, Ex: (javascript, yourusername, etc) -->
     <meta name="keywords" content="samkanfer, Samuel, Kanfer, Data, CSS, HTML, Developer, Tableau, Python, R, Big Data, Analysis, Business Intelligence" />
