Update CTA Link

--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
         <h2 class="section-title">Contact</h2>
         <div class="contact-wrapper">
           <p class="contact-wrapper__text">Please reach out to me!</p>
-          <a href="https://www.linkedin.com/in/samkanfer/" class="cta-btn cta-btn--resume">Message me on LinkedIn</a>
+          <a href="https://www.linkedin.com/in/samkanfer/" class="cta-btn cta-btn--resume" target="_blank">Message me on LinkedIn</a>
         </div>
       </div>
     </section>
